refact: remove key

--- a/notebooks/data_collect_for_ai.ipynb
+++ b/notebooks/data_collect_for_ai.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "69e63cb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'BoYang-find-PRD-1e312bc95-0039821d'"
+    "API_KEY = ''"
    ]
   },
   {
